# AegisCore

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  COMMANDS.md  README.md  dev.sh
.claude/: settings.json
.claude/agents/: ac2-security-reviewer.md  misra-reviewer.md
.claude/hooks/: block-hal-in-app.sh  build-on-edit.sh
.claude/skills/trace-req/: SKILL.md
code_doc/: 01_domain.md  02_main.md  03_state_machine.md  04_simulation_engine.md  05_button_classifier.md  06_platform_io.md  07_fail_safe_supervisor.md  08_watchdog.md  09_post.md  10_panic.md  11_mpu_config.md  12_crc16.md  13_ac2_framer.md  14_hmac_sha256.md  15_replay_guard.md  16_rate_limiter.md  17_telemetry.md  18_uart_driver.md  19_i_serial.md  20_version.md  21_bsp_interrupts.md  22_freertos_config.md  23_freertos_task_model.md  README.md  edge-communication-guide.md  gw_01_overview.md  gw_02_config.md  gw_03_index.md  gw_04_bridge.md  gw_05_serial_bridge.md  gw_06_ac2_parser.md  gw_07_ac2_framer.md  gw_08_crc16.md  gw_09_hmac.md  gw_10_ws_schemas.md  gw_11_ws_server.md  joystick-wiring.md  roadmap.md  rtos_cpp_learning_path.md  ui_01_overview.md  (+5 more)
docs/: lcd-wiring.md
docs/HAZOP/: fmea.md
docs/IRS/: ac2-telemetry-irs.tex
docs/SRD/: srd.tex
docs/SRD/appendices/: acronyms.tex  glossary.tex
docs/SRD/sections/: 01_scope.tex  02_references.tex  03_conops.tex  04_arch.tex  05_fr.tex  06_nfr.tex  07_security.tex  08_safety.tex  09_verification.tex  10_traceability.tex
docs/VnV/: verification-plan.md
edge/: CMakeLists.txt
edge/app/: ac2_framer.cpp  ac2_framer.hpp  button_classifier.cpp  crc16.hpp  domain.hpp  fail_safe_supervisor.cpp  fail_safe_supervisor.hpp  freertos_hooks.cpp  hmac_sha256.cpp  i_serial.hpp  lcd_driver.cpp  main.cpp  mpu_config.hpp  platform_io.cpp  platform_io.hpp  post.cpp  post.hpp  rate_limiter.cpp  rate_limiter.hpp  simulation_engine.cpp  state_machine.cpp  state_machine.hpp  telemetry.hpp  version.hpp  watchdog.hpp
edge/app/comms/: command_dispatch.cpp  crc16.cpp  heartbeat_task.cpp  hmac_sha256.hpp  replay_guard.cpp  replay_guard.hpp  telemetry_task.cpp  uart_rx_task.cpp
edge/app/control/: button_classifier.hpp  domain.hpp  simulation_engine.hpp  state_machine.hpp
edge/app/drivers/: lcd_driver.hpp  platform_io.cpp
edge/app/runtime/: edge_runtime.cpp  edge_runtime.hpp
edge/app/safety/: freertos_hooks.cpp  panic.hpp
edge/app/tasks/: joystick_task.cpp  lcd_status_task.cpp  state_machine_task.cpp  user_tasks.cpp
edge/bsp/: FreeRTOSConfig.h  fault_stubs.c  mpu_config.cpp  panic.cpp  stm32f4xx_it.c  uart_driver.cpp  uart_driver.hpp  watchdog.cpp
edge/cmake/: arm-none-eabi.cmake
edge/linker/: STM32F407VGTx_FLASH.ld
edge/tests/unit/: CMakeLists.txt  test_ac2_framer.cpp  test_button_classifier.cpp  test_crc16.cpp  test_hmac_sha256.cpp  test_rate_limiter.cpp  test_replay_guard.cpp  test_state_machine.cpp
edge/tests/unit/mocks/: hal_mock.hpp
gateway/: package-lock.json  package.json  tsconfig.json
gateway/src/: config.ts  index.ts
gateway/src/bridge/: Bridge.ts
gateway/src/serial/: AC2Framer.ts  AC2Parser.ts  Crc16.ts  Hmac.ts  SerialBridge.ts
gateway/src/ws/: WsServer.ts  schemas.ts
gateway/tests/: ac2parser.test.ts  crc16.test.ts
gateway/tools/: sim.ts
inference/: server.py
principles/: DESIGN_PATTERNS.md  OOP_PRINCIPLES.md  SOLID_PRINCIPLES.md
tests/: CMakeLists.txt
tests/unit/: edge_logic_tests.cpp
ui/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.module.css  page.tsx
ui/components/: EventLog.module.css  EventLog.tsx  RadarDisplay.module.css  RadarDisplay.tsx  TaskMonitor.module.css  TaskMonitor.tsx
ui/components/dashboard/: AlertBanners.tsx  EventLog.tsx  Footer.tsx  NlpCommandPanel.tsx  RadarDisplay.tsx  StateControlPanel.tsx  StateDescriptionPanel.tsx  StateStatusPanel.tsx  TaskMonitor.tsx  TelemetryPanel.tsx  TopBar.tsx  VisionPanel.tsx
ui/components/ui/: ConnectionDot.tsx  Metric.tsx  StateButton.tsx
ui/hooks/: useAC2Socket.ts
ui/lib/: inferenceClient.ts  systemState.ts
